--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.0",
     "jquery-resizable": "^1.0.6",
+    "magic-erase": "0.0.2",
+    "magic-wand-tool": "^1.1.4",
     "ngx-image-cropper": "^3.1.7",
-    "rxjs": "~6.4.0",
+    "ngx-webcam": "^0.3.0",
+    "rxjs": "^6.4.0",
+    "sensifai-sdk-ngx": "^1.0.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
