--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "magic-wand-tool": "^1.1.4",
     "ngx-image-cropper": "^3.1.7",
     "ngx-webcam": "^0.3.0",
+    "node": "^14.5.0",
     "rxjs": "^6.4.0",
     "sensifai-sdk-ngx": "^1.0.1",
+    "sockjs": "^0.3.20",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
